src/scss/base.scss
/*-------------------------------------*\

  Inclusief Design

  - Floris Jansen, floris@fmjansen.nl

  base.scss
  + Variables (colors and fonts)
  + Reset
  + Paragraph styles
  + Header
  + Table of contents
  + Main
  + Footer
  ...

\*-------------------------------------*/





/*-------------------------------------*\
  Variables (colors and fonts)
\*-------------------------------------*/
/* martin - latin */
@font-face {
  font-display: swap;
  font-family: 'Martin';
  font-weight: bold;
  src: url('/fonts/MARTIN-Regular.woff2') format('woff2'),
       url('/fonts/MARTIN-Regular.woff') format('woff'),
       url('/fonts/MARTIN-Regular.eot') format('eot');
}

/* lora-regular - latin */
@font-face {
  font-display: swap;
  font-family: 'Lora';
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/lora-v16-latin-regular.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('/fonts/lora-v16-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('/fonts/lora-v16-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('/fonts/lora-v16-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('/fonts/lora-v16-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('/fonts/lora-v16-latin-regular.svg#Lora') format('svg'); /* Legacy iOS */
}

/* lora-700 - latin */
@font-face {
  font-display: swap;
  font-family: 'Lora';
  font-style: normal;
  font-weight: 700;
  src: url('/fonts/lora-v16-latin-700.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('/fonts/lora-v16-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('/fonts/lora-v16-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
       url('/fonts/lora-v16-latin-700.woff') format('woff'), /* Modern Browsers */
       url('/fonts/lora-v16-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
       url('/fonts/lora-v16-latin-700.svg#Lora') format('svg'); /* Legacy iOS */
}

$font: 'Lora', serif;
$font--heading: 'Martin', sans-serif;
$background: #fff;
$text: #000;
$accent: #d93920;
$anchors: #1c29a8;

// Breakpoints
$brk--phone: 768px;
$brk--tablet: 992px;
$brk--desktop: 1200px;
$brk--large-desktop: 1920px;






/*-------------------------------------*\
  Reset
\*-------------------------------------*/
html {
  overflow-x: hidden;
  scroll-behavior: smooth;
}

body {
  --accent: #{$accent};
  --anchors: #{$anchors};
  --text: #{$text};
  background: $background;
  color: var(--text);
  font-family: $font;
  font-size: 15px;
  font-weight: 300;
  line-height: 1.7;
  margin: 0;
  word-wrap: break-word;

  @media (min-width: $brk--tablet) {
    font-size: 1.15em;
  }
}





/*-------------------------------------*\
  Paragraph styles
\*-------------------------------------*/
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $font--heading;
  line-height: .75;
}

h1 {
  font-size: 15vw;

  @media (min-width: $brk--phone) {
    font-size: 6em;
  }
}

h2 {
  color: var(--accent);
  font-size: 3.5em;
  margin: 1em 0 .5em;
  max-width: 1.15 * 36rem;
  text-transform: uppercase;
}

h3 {
  font-size: 2.5em;
  text-transform: uppercase;
}

a {
  color: var(--anchors, $anchors);
}

p,
ul,
ol {
  max-width: 36em;
}

ul,
ol {
  box-sizing: border-box;
  padding-left: 1.5em;
}

li {
  line-height: 1.6;
  margin: 1.25em 0;
}

strong {
  font-weight: 700;
}

blockquote {
  border-left: .3em solid var(--accent);
  box-sizing: border-box;
  margin-left: 0;
  max-width: 36em;
  padding-left: 2em;
}

img {
  max-height: 50vh;
  max-width: 70vw;
}





/*-------------------------------------*\
  Header
\*-------------------------------------*/
.skip {
  background: $background;
  border: 1px solid $text;
  color: $text;
  display: block;
  line-height: 1;
  padding: 1em;
  position: absolute;
  top: -5em;

  &:focus {
    left: 5px;
    top: 5px;
    z-index: 100000;
  }
}

.logo {
  color: var(--accent);
  margin: 7.5vw 10vw .25em;
  text-transform: uppercase;

  &__link {
    color: var(--accent);
    text-decoration: none;
  }

  &__page {
    color: var(--text);
  }
}

.menu-cont {
  overflow-x: auto;
  width: 100%;
}

.main-menu {
  display: flex;
  flex-flow: row;
  list-style: none;
  margin-left: -1em;
  padding-left: 10vw;

  &__item {
    margin: 0;
    padding: 0;
  }

  &__link {
    color: inherit;
    font-weight: normal;
    padding: 0 1em;
    text-decoration-color: var(--accent);

    &--active {
      font-weight: bold;
    }
  }

  &:hover {
    opacity: 1;
  }
}





/*-------------------------------------*\
  Table of contents / in-page navigation
\*-------------------------------------*/
.toc {
  background: $background;
  border-top: 1px solid transparentize($text, .8);
  bottom: 0;
  box-sizing: border-box;
  left: 0;
  max-height: 95vh;
  overflow-y: auto;
  padding: 0 .5em;
  position: fixed;
  width: 100vw;
  z-index: 2;

  p {
    text-align: center;
    margin: 1em auto;
  }

  &.opened {
    #markdown-toc {
      height: 100%;
      margin: 1em 0;
    }

    p::before {
      content: "Close ";
    }
  }

  @media (min-width: $brk--tablet) {
    background: none;
    border: 0;
    bottom: auto;
    float: right;
    font-size: .9rem;
    left: auto;
    line-height: 1;
    max-width: 18vw;
    opacity: .6;
    position: sticky;
    right: 2em;
    top: 5vh;
    width: auto;

    &:hover {
      opacity: 1;
    }

    .open a {
      color: $text;
      cursor: text;
      text-decoration: none;
      font-style: italic;
    }

    p {
      text-align: right;
    }

    &.opened {
      p::before {
        content: "";
      }
    }
  }
}

#markdown-toc {
  height: 0;
  margin: 0;
  transition: all 100 ease-out;
  transition-delay: 5ms;

  @media (min-width: $brk--tablet) {
    height: 100%;
    list-style: none;
    margin: 1em 0;
    text-align: right;

    ul {
      border-right: 1px solid $text;
      list-style: none;
      padding: 0 1.5em 0 0;
    }
  }
}





/*-------------------------------------*\
  Main
\*-------------------------------------*/
.page {
  padding: 1.5vw 10vw;
}

.home {
  --accent: #{$background};
  --text: #{$background};
  background: $accent;

  &__tagline {
    font-size: 10vw;
    font-weight: normal;
    line-height: 1.2;
    margin: .9em 10vw .65em;

    @media (min-width: $brk--phone) {
      font-size: 6.8vw;
    }
  }

  .logo {
    margin-top: 15vw;
    opacity: .7;

    @media (min-width: $brk--tablet) {
      margin-top: 10vw;
    }
  }

  &__why {
    background: var(--text);
    color: $text;
    margin: 0 -10vw 5vw;
    padding: .5vw 10vw 5vw;
  }

  h2 {
    @media (min-width: $brk--phone) {
      font-size: 5vw;
    }
  }

  footer {
    --anchors: #fff;
  }
}

.content-overview {
  &__scroll {
    margin: 0 -10vw;
    overflow-x: scroll;
  }

  &__container {
    box-sizing: border-box;
    display: flex;
    flex-flow: row nowrap;
    padding: 0 10vw;
    width: 100%;

    &::after {
      content: ' ';
      display: block;
      flex-shrink: 0;
      height: 1px;
      margin-left: -1em;
      width: 10vw;

      @media (min-width: $brk--tablet) {
        display: none;
      }
    }
  }
}

.card {
  background: $background;
  border-radius: .75em;
  box-shadow: 0 .2em .5em transparentize($text, .7);
  color: $text;
}

.page-card {
  @extend .card;
  flex-grow: 1;
  flex-shrink: 0;
  margin: 1em 1em 1em 0;
  padding: 1em 1.5em;
  width: 10.75em;

  @media (min-width: $brk--tablet) {
    margin-right: 3em;
    padding: 2em 2.5em;
  }

  &__level {
    color: $accent;
    font-weight: bold;
    margin: 0 0 .25em;
  }

  &__subject {
    font-size: 2.75em;
    margin: 0 0 .2em;
    text-transform: uppercase;

    @media (min-width: $brk--tablet) {
      font-size: 4.5vw;
    }
  }

  &__parts {
    list-style: none;
    margin: 1.5em 0 0;
    padding: 0;
  }

  &__part {
    margin: 0;
  }

  &__link {
    border: 0 solid transparentize($text, .8);
    border-top-width: 1px;
    display: block;
    padding: 1em .5em;
    text-decoration: none;

    &[href^='/']:hover {
      background: transparentize($text, .9);
    }

    &::after {
      content: '→';
      float: right;
    }
  }
}

.footnotes {
  @extend .page;
  font-size: 1rem;
  opacity: .8;
}

.next-page {
  max-width: 100%;
}

.next-page-link {
  background: var(--accent);
  border-radius: .5em;
  color: $background;
  display: block;
  line-height: 1.2;
  margin-top: 10vw;
  padding: unquote('min(7vw, 4em)');
  position: relative;
  text-decoration: none;
  z-index: 3;

  strong {
    display: block;
    font-size: unquote('min(6vw, 3em)');

    &::after {
      content: "→";
      float: right;
    }
  }

  &:hover {
    strong {
      text-decoration: underline;
    }
  }

  &::after {
    content: "";
    clear: both;
    display: block;
  }
}






/*-------------------------------------*\
  Footer
\*-------------------------------------*/
.contributing {
  padding: 0 10vw 2vw;
  text-align: center;

  h2 {
    margin-left: auto;
    margin-right: auto;
  }

  &__cta {
    margin: 1em auto;
  }
}

.updates {
  @extend .card;
  --anchors: #{$anchors};
  --accent: #{$accent};
  box-sizing: border-box;
  margin: 6vw auto 2vw;
  padding: .1vw 7.5vw 4vw;

  &__label {
    font-size: 1rem;
    font-weight: bold;
    margin-bottom: -1em;
  }
}

.button {
  background: lighten($text, 15%);
  border: 0;
  border-radius: .2em;
  color: $background;
  display: inline-block;
  font-family: $font;
  font-size: 1em;
  line-height: 1;
  margin: .5em 1.5em;
  padding: 1.2em;
  text-decoration: none;

  &--alternative {
    font-weight: bold;
    margin: .5em 0;
    max-width: 16rem;
    width: 100%;
  }

  &:hover {
    background: $text;
  }

  &:focus {
    background: $text;
    outline-style: auto;
  }
}

.text-input {
  border: 1px solid #ccc;
  border-radius: .2em;
  box-sizing: border-box;
  font-family: $font;
  font-size: 1em;
  max-width: 16rem;
  padding: 1em 1.25em;
  width: 100%;
}

.footer {
  &__contact {
    max-width: none;
    opacity: .8;
    padding: 2vw 10vw;
    text-align: center;
  }
}

